Header terminado + tecnica del wrapper y responsive

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="header">
               <div class="wrapper-header">
                 <div class="header-content">
-                  <div class="variantes">
+                  <div class="variantes variantesC">
                     <p>VARIANTES DEL PROYECTO</p>
                     <a href="">Nemium A </a>
                     <a href="">Nemium B </a>
@@ -110,7 +110,7 @@
                     <a href="./variantes/nemiumD.html">Nemium D </a>
                     <a href="">Nemium E </a>
                   </div>
-                  <nav class="navegation">
+                  <nav class="navegation navegationC">
                     <p>CONTENIDO</p>
                     <div class="content-nav">
                       <details open class="resetCounter">
