--- a/variantes/nemiumD.html
+++ b/variantes/nemiumD.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -92,68 +91,82 @@
     <div class="place"></div>
 
     <div class="header">
-      <div class="wrapper-header">
+      <div class="wrapperD">
         <div class="header-content">
-          <div class="variantes">
-            <p>VARIANTES DEL PROYECTO</p>
-            <a href="">Nemium A </a>
-            <a href="">Nemium B </a>
-            <a href="../index.html">Nemium C </a>
-            <a href="">Nemium D </a>
-            <a href="">Nemium E </a>
-          </div>
-          <nav class="navegation">
-            <p>CONTENIDO</p>
-            <div class="content-nav">
-              <details open class="resetCounter">
-                <summary><p>Setup</p></summary>
-                <ol>
-                  <li class="counterIncrement">
-                    <a href="#googleChorme">Google Chrome</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#vsc">Visual Studio Code</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#figma">Figma</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#gitHub">GitHub</a>
-                  </li>
-                </ol>
-              </details>
-              <details class="resetCounter">
-                <summary>
-                  <p>Conceptos esenciales del Desarrollo Web</p>
-                </summary>
-                <ol>
-                  <li class="counterIncrement">
-                    <a href="#html">Qué es HTML</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#etiquetas">Etiquetas</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#dom">DOM</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#semantica">Semántica</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#atributos">Atributos</a>
-                  </li>
-                  <li class="counterIncrement">
-                    <a href="#css">Qué es CSS</a>
-                  </li>
-                </ol>
-              </details>
+          <header>
+            <div class="variantes variantesD">
+              <p>VARIANTES DEL PROYECTO</p>
+              <a href="">Nemium A </a>
+              <a href="">Nemium B </a>
+              <a href="../index.html">Nemium C </a>
+              <a href="">Nemium D </a>
+              <a href="">Nemium E </a>
             </div>
-          </nav>
+            <nav class="navegation navegationD">
+              <p>CONTENIDO</p>
+              <div class="content-nav-D">
+                <details open class="resetCounter">
+                  <summary><p>Setup</p></summary>
+                  <ol>
+                    <li>
+                      <a class="counterIncrement" href="#googleChorme"
+                        >Google Chrome</a
+                      >
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#vsc"
+                        >Visual Studio Code</a
+                      >
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#figma">Figma</a>
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#gitHub">GitHub</a>
+                    </li>
+                  </ol>
+                </details>
+                <details class="resetCounter">
+                  <summary>
+                    <p class="primary50">
+                      Conceptos esenciales del Desarrollo Web
+                    </p>
+                  </summary>
+                  <ol>
+                    <li>
+                      <a class="counterIncrement" href="#html">Qué es HTML</a>
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#etiquetas"
+                        >Etiquetas</a
+                      >
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#dom">DOM</a>
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#semantica"
+                        >Semántica</a
+                      >
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#atributos"
+                        >Atributos</a
+                      >
+                    </li>
+                    <li>
+                      <a class="counterIncrement" href="#css">Qué es CSS</a>
+                    </li>
+                  </ol>
+                </details>
+              </div>
+            </nav>
+          </header>
         </div>
       </div>
     </div>
     <div class="main">
-      <div class="wrapper">
+      <div class="wrapperD">
         <div class="main-content">
           <main>
             <h1>Curso esencial de HTML y CSS</h1>
